objects/PSBulkActionConfig__c.object
<CustomObject>
    <fields>
        <fullName>Bulk_Edit_Fields__c</fullName>
        <label>Bulk Edit Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Config_Name__c</fullName>
        <label>Config Name</label>
        <length>70</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Header_Icon__c</fullName>
        <label>Header Icon</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAQL_ID_Field__c</fullName>
        <label>SAQL ID Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Bulk_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Bulk Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_SAQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show SAQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Background_Color__c</fullName>
        <label>Tab Background Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PSBulkActionConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Config_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>PSBulkActionConfig ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSBulkActionConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>